--- a/promptflow/web-classification/run.yml
+++ b/promptflow/web-classification/run.yml
@@ -3,7 +3,7 @@ flow: .
 data: data.jsonl
 
 # define cloud resource
-runtime: Development-Runtime
+runtime: pf-dev-runtime
 
 connections:
   classify_with_llm:
